--- a/SudokuHelper/Cargo.toml
+++ b/SudokuHelper/Cargo.toml
@@ -13,6 +13,8 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 js-sys = "0.3.45"
+getrandom = { version = "0.2", features = ["js"] }
+rand="^0.8.4"
 wasm-bindgen = "0.2"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 wee_alloc = { version = "0.4.2", optional = true }
