--- a/SudokuHelper/Cargo.toml
+++ b/SudokuHelper/Cargo.toml
@@ -30,3 +30,11 @@ wasm-bindgen-test = "0.2"
 
 [profile.release]
 opt-level = 3
+debug = false
+debug-assertions = false
+overflow-checks = false
+lto = false
+panic = 'unwind'
+incremental = false
+codegen-units = 16
+rpath = false
